# Document-Insights-Agent

./: .coveragerc  .dockerignore  .env.example  DockerfileLambda  README.md  lambda_function.py  main.py  pyproject.toml
config/: chatbot.yaml  db_config.yaml  gmail_extraction_config.yaml  hybrid_chatbot.yaml  milvus_config.yaml  ner.yaml  ocr_config.yaml  outlook_config.yaml
src/database/: milvus_db.py  pgvector_store.py  secrets_loader.py  semantic_cache.py  vector_store_factory.py
src/extraction/: s3_extraction.py
src/llm/: litellm_client.py
src/middleware/: auth_middleware.py  license_middleware.py
src/ocr/: ocr.py  semantic_chunker.py
src/routers/: s3_ocr_router.py
src/utils/: config.py  error_capture.py  event_messages.py  follow_up_generator.py  kafka.py  kafka_base.py  license_validator.py  logger.py  nia_embed_notifier.py  obs.py  opik_setup.py  otel_utils.py  reasoning_extractor.py  s3_utility.py  secret_manager.py  tracing.py
tests/: conftest.py
tests/database/: __init__.py  test_milvus_db.py
tests/extraction/: __init__.py  test_s3_extraction.py
tests/llm/: __init__.py  test_litellm_client.py
tests/middleware/: test_auth_middleware.py  test_license_middleware.py
tests/ocr/: __init__.py  test_ocr.py  test_semantic_chunker.py
tests/routers/: __init__.py  test_s3_ocr_router.py
tests/utils/: test_config.py  test_error_capture.py  test_event_messages.py  test_kafka.py  test_kafka_base.py  test_license_validator.py  test_logger.py  test_obs.py  test_opik_setup.py  test_otel_utils.py  test_reasoning_extractor.py  test_s3_utility.py  test_secret_manager.py  test_tracing.py
